--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ api-docs/
 _site/
 .cache
 test/stubs-layout-cache/_includes/*.js
+
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
