--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,9 @@ version: '3.7'
 services:
   backend-dev:
     image: yassinsiouda/computerjazzclub-back:dev
-    build: pocketbase/
+    build: backend/
     ports:
-      - "${BACKEND_PORT}:8090"
+      - "8090:8090"
     volumes:
       - ./backend/pb_migrations/:/pb_migrations
       - ./backend/pb_data/:/pb_data/
@@ -14,8 +14,8 @@ services:
       context: front/
       target: "dev"
     volumes:
-      - ./front/:/app/src
+      - ./front/:/app/
     ports:
-      - "${FRONTEND_PORT}:3000" #keep same port to avoid Cross scripting errors
+      - "8080:8080" #keep same port to avoid Cross scripting errors
     env_file:
       - .env
