--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^3.1.1",
+    "@11ty/eleventy-fetch": "^5.1.0",
     "markdown-it": "^14.1.0"
   }
 }
